﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.12...]
### 2018-12-09 Version 0.12
	Added: Watchlist rules now have description property for user comments.
	Changed: Visual styles are enabled. This was required to allow keyboard shortcuts in text fields like ctrl-a.

## [0.11...]
### 2018-12-09
	Fixed: Accidentally disabled tray context menu.
	Added: Logging for unhandled WinForms exceptions.
	Removed: The run once (--once) option. Unnecessary complication and not in spirit of what TM is for.
	Added: Ability to enable some experimental features via Core.ini [Experimental] section.
		Window Resize=true/false, Last Modified=true/false, and Temp Monitor=true/false
	Changed: Window Resize now no longer constantly rewrites the .ini
	Internal: Unified process modify output.
### 2018-12-07
	Added: Last modified list to the info tab, with option to copy path of the app to clipboard.
### 2018-12-06
	Added: UI option to toggle exit confirmation.
	Fixed: Exit confirmation setting now respected.
	Changed: Info tab re-enabled. Still work in progress.
	Internal: CPU monitoring moved out of power management to its own component.
### 2018-12-05
	Fix: Ensure restore mode & method are set.
	Fix: Ensure process exit is detected properly and that they're cleaned up.
### 2018-12-04
	Changed: Internet checking changed to be faster and smarter. Testing still required to verify.
	Internal: Better cleanup of event handlers
	Internal: Code cleanup
### 2018-12-03
	Changed: Process debug is now more detailed with more info on process debug tab.
	Fixed: Processing counter occasionally forgot to decrement.
### 2018-12-02
	Changed: CPU sampler pausing is more thorough.
	Changed: Debug is less spammy.
	Added: Power configuration has little bit more tooltip details.
### 2018-11-29
	Fixed: Watchlist copy to clipboard option was not including some options.
### 2018-11-28