@@ -135,6 +135,9 @@
     <Compile Include="TextInputBox.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UI\ListViewEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UI\UniForm.cs">
       <SubType>Form</SubType>
     </Compile>
