@@ -6,6 +6,7 @@ Comprehensive changes can be found in Git change history:
 ### 2018-12-09 Version 0.12
 	Added: Watchlist rules now have description property for user comments.
 	Changed: Visual styles are enabled. This was required to allow keyboard shortcuts in text fields like ctrl-a.
+	Fixed: Reduced ListView flickering.
 
 ## [0.11...]
 ### 2018-12-09
